# RescueBoxOnnx

./: .gitignore  Dockerfile  README.md  README_docker.md  pyproject.toml  setup_rescuebox.sh
.devcontainer/: devcontainer.json
License&Copyright/: COPYRIGHT.txt  LICENSE  NOTICE
RescueBox-Desktop/src/main/database/migrations/: 0013_add_gpu_recommended_to_models.ts  umzug.ts
RescueBox-Desktop/src/main/services/: model-app-service.ts  register-model-service.ts
RescueBox-Desktop/src/renderer/jobs/: JobViewOutputs.tsx
RescueBox-Desktop/src/renderer/lib/: utils.ts
RescueBox-Desktop/src/shared/: generated_models.ts  openapi.yaml
rescuebox/plugins/: __init__.py
src/age_and_gender_detection/age_and_gender_detection/: main.py
src/deepfake-detection/deepfake_detection/: main.py  sim_data.py
src/deepfake-video/: convert.py  pyproject.toml
src/deepfake-video/deepfake_video/: .gitignore  LICENSE  README.md
src/deepfake-video/deepfake_video/efficientNet/: app_info.md  detect_deepfakes.py  evalpipeline.py  requirements.txt  server.py
src/deepfake-video/deepfake_video/efficientNet/blazeface/: face_extract.py
src/deepfake-video/deepfake_video/image_model/: check_cuda.py  client.py  img-app-info.md  model_server.py  requirements.txt  sim_data.py  test.py  test_data_prepare.py
src/deepfake-video/deepfake_video/video_detector/: app_info.md  convert.py  evalpipeline.py  requirements.txt  server.py  video_evaluator.py
src/deepfake-video/deepfake_video/video_detector/network/: models.py
src/face-detection-recognition/: pyproject.toml
src/face-detection-recognition/face_detection_recognition/: face_match_server.py
src/hello-world/: README.md  __init__.py  pyproject.toml
src/hello-world/hello_world/: main.py
src/hello-world/tests/: test_main.py
src/image-caption-blip-onnx/: pyproject.toml
src/image-caption-blip-onnx/image_caption_blip_onnx/: main.py
src/image-caption-blip-onnx/tests/: test_main.py
src/image-details/: pyproject.toml
src/image-details/image_details/: main.py
src/lavis-vqa/: pyproject.toml
src/lavis-vqa/lavis_vqa/: main.py
src/rb-api/rb/api/: models.py
src/rb-api/rb/api/routes/: cli.py
src/rb-lib/rb/lib/: ml_service.py  typer.py
web/rescuebox-autoui/src/: App.jsx
(+3 files in other folders)
