[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = "A simple Hello World plugin for RescueBox."
authors = ["Gemini"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
typer = "^0.12.5"
pydantic = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"